# fast-api-clean-architecture

./: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/controllers/: users.py
app/api/v1/schemas/: users.py
app/core/: config.py  security.py
app/core/db/: session.py
app/migrations/: env.py
app/migrations/versions/: 050b13453e1b_user_table.py  37e1d9a7c03e_create_user_table.py
app/models/: users.py
docker/db/: Dockerfile
docker/web/: Dockerfile
